--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -12,32 +12,33 @@
 				border: none;
 				padding-bottom: 0;
 			}
-		}
 
-		.article-meta{
-			margin-bottom: 1em;
-
-			.article-title{
-				margin: 0;
-			}
-
-			.post-categories{
-
-				li{
-					list-style: none;
-    				padding: 0;
-    				margin: 0;
-    				text-transform: none;
-				}
-
-			}
+			.article-info{
+				margin-bottom: 1em;
 	
+				.article-title{
+					margin: 0;
+				}
+	
+				.post-categories{
+	
+					li{
+						list-style: none;
+    					padding: 0;
+    					margin: 0;
+    					text-transform: none;
+					}
+	
+				}
+	
+			}
+
 		}
 
 	}
 
 	.post-meta{
-		dt +dd{
+		dt + dd{
 			margin-bottom: 1em;
 		
 		}
