--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -27,6 +27,9 @@
     					padding: 0;
     					margin: 0;
     					text-transform: none;
+    					text-size: .8em;
+
+    					a{ color: #333; }
 					}
 				}
 			}
