--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -719,12 +719,17 @@ footer .button {
   padding: 0;
   margin: 0;
   text-transform: none;
+  text-size: .8em;
 }
-/* line 37, ../sass/_page.scss */
+/* line 32, ../sass/_page.scss */
+.page .article-list article .article-info .post-categories li a {
+  color: #333;
+}
+/* line 40, ../sass/_page.scss */
 .page .post-meta dt + dd {
   margin-bottom: 1em;
 }
-/* line 43, ../sass/_page.scss */
+/* line 46, ../sass/_page.scss */
 .page .sub-nav {
   background: #396eb6;
   color: #fff;
@@ -732,33 +737,33 @@ footer .button {
   position: absolute;
   right: 10%;
 }
-/* line 50, ../sass/_page.scss */
+/* line 53, ../sass/_page.scss */
 .page .sub-nav .button {
   width: 100%;
   box-sizing: border-box;
   margin-bottom: 1em;
   text-align: center;
 }
-/* line 57, ../sass/_page.scss */
+/* line 60, ../sass/_page.scss */
 .page .sub-nav .links {
   padding: 1em;
 }
-/* line 61, ../sass/_page.scss */
+/* line 64, ../sass/_page.scss */
 .page .sub-nav li {
   list-style: none;
   padding: 0;
   margin: 0 0 .5em;
 }
-/* line 66, ../sass/_page.scss */
+/* line 69, ../sass/_page.scss */
 .page .sub-nav li a {
   color: #fff;
   text-decoration: none;
 }
-/* line 70, ../sass/_page.scss */
+/* line 73, ../sass/_page.scss */
 .page .sub-nav li a:hover {
   text-decoration: underline;
 }
-/* line 76, ../sass/_page.scss */
+/* line 79, ../sass/_page.scss */
 .page .banner {
   width: 100%;
   height: 400px;
@@ -767,17 +772,17 @@ footer .button {
   background-position: center;
   background-repeat: no-repeat;
 }
-/* line 84, ../sass/_page.scss */
+/* line 87, ../sass/_page.scss */
 .page .banner .banner-filter {
   width: 100%;
   height: 100%;
   background: url("../assets/slideshow-filter.png") repeat;
 }
-/* line 90, ../sass/_page.scss */
+/* line 93, ../sass/_page.scss */
 .page .promo-image {
   width: 100%;
 }
-/* line 94, ../sass/_page.scss */
+/* line 97, ../sass/_page.scss */
 .page .breadcrumbs {
   background: #e6e7e8;
   padding-top: 2em;
@@ -785,17 +790,17 @@ footer .button {
   padding-bottom: 4em;
   font-family: "Open Sans", sans-serif;
 }
-/* line 101, ../sass/_page.scss */
+/* line 104, ../sass/_page.scss */
 .page .breadcrumbs ul li {
   list-style: none;
   display: inline-block;
   margin: 0 .25em;
 }
-/* line 107, ../sass/_page.scss */
+/* line 110, ../sass/_page.scss */
 .page .breadcrumbs a {
   text-decoration: none;
 }
-/* line 110, ../sass/_page.scss */
+/* line 113, ../sass/_page.scss */
 .page .page-title {
   width: 60%;
   margin-left: -25%;
@@ -804,29 +809,29 @@ footer .button {
   margin-top: -1.5em;
   margin-bottom: 0 !important;
 }
-/* line 119, ../sass/_page.scss */
+/* line 122, ../sass/_page.scss */
 .page .page-section {
   background: #fff;
   padding: 2em 0;
   border-bottom: 4px solid #cc3333;
 }
-/* line 124, ../sass/_page.scss */
+/* line 127, ../sass/_page.scss */
 .page .page-section .wrapper {
   padding-left: 6em;
 }
-/* line 128, ../sass/_page.scss */
+/* line 131, ../sass/_page.scss */
 .page .page-section p, .page .page-section ul {
   width: 60%;
 }
-/* line 132, ../sass/_page.scss */
+/* line 135, ../sass/_page.scss */
 .page .page-section.bg-gray {
   background: #e6e7e8;
 }
-/* line 135, ../sass/_page.scss */
+/* line 138, ../sass/_page.scss */
 .page .page-section.full-width p, .page .page-section.full-width ul {
   width: 90%;
 }
-/* line 142, ../sass/_page.scss */
+/* line 145, ../sass/_page.scss */
 .page .profile {
   *zoom: 1;
   padding-bottom: 2em;
@@ -837,41 +842,41 @@ footer .button {
   display: table;
   clear: both;
 }
-/* line 147, ../sass/_page.scss */
+/* line 150, ../sass/_page.scss */
 .page .profile-card {
   background: #999;
   color: #153f60;
   width: 47%;
   margin-right: 3%;
 }
-/* line 154, ../sass/_page.scss */
+/* line 157, ../sass/_page.scss */
 .page .profile-card img {
   float: left;
   width: 50%;
 }
-/* line 159, ../sass/_page.scss */
+/* line 162, ../sass/_page.scss */
 .page .profile-card dl {
   text-align: center;
   padding-top: 2em;
 }
-/* line 164, ../sass/_page.scss */
+/* line 167, ../sass/_page.scss */
 .page .profile-card .position {
   text-transform: uppercase;
   font-weight: bold;
 }
-/* line 169, ../sass/_page.scss */
+/* line 172, ../sass/_page.scss */
 .page .profile-card .name {
   border-bottom: 1px dashed #153f60;
   display: inline-block;
   padding-bottom: .5em;
   margin-bottom: .5em;
 }
-/* line 178, ../sass/_page.scss */
+/* line 181, ../sass/_page.scss */
 .page .profile-text {
   padding-left: 50%;
   width: 50%;
 }
-/* line 183, ../sass/_page.scss */
+/* line 186, ../sass/_page.scss */
 .page .profile-stack {
   float: left;
   color: #153f60;
@@ -879,21 +884,21 @@ footer .button {
   margin-right: 3%;
   margin-bottom: 3%;
 }
-/* line 190, ../sass/_page.scss */
+/* line 193, ../sass/_page.scss */
 .page .profile-stack img {
   width: 100%;
 }
-/* line 194, ../sass/_page.scss */
+/* line 197, ../sass/_page.scss */
 .page .profile-stack dl {
   text-align: center;
 }
-/* line 198, ../sass/_page.scss */
+/* line 201, ../sass/_page.scss */
 .page .profile-stack .position {
   text-transform: uppercase;
   font-weight: bold;
   margin-top: 1em;
 }
-/* line 204, ../sass/_page.scss */
+/* line 207, ../sass/_page.scss */
 .page .profile-stack .name {
   border-bottom: 1px dashed #153f60;
   display: inline-block;
@@ -901,17 +906,17 @@ footer .button {
   margin-bottom: .5em;
 }
 @media screen and (max-width: 1250px) {
-  /* line 214, ../sass/_page.scss */
+  /* line 217, ../sass/_page.scss */
   .page .sub-nav {
     width: 100%;
     position: static;
   }
-  /* line 218, ../sass/_page.scss */
+  /* line 221, ../sass/_page.scss */
   .page .sub-nav ul li {
     display: inline-block;
     width: 15%;
   }
-  /* line 223, ../sass/_page.scss */
+  /* line 226, ../sass/_page.scss */
   .page .sub-nav .button {
     display: inline-block;
     width: 25%;
